--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key to Start</h1>
+  <h1 id="level-title">Click on start!</h1>
   <div class="container">
-    <div lass="row">
+    <div class="row">
 
       <div type="button" id="green" class="btn green">
 
@@ -32,8 +32,13 @@
       </div>
 
     </div>
+    
+    <div type="button" id="start" class="start-btn">
+      <h2 class="start-btn">Start</h2>
+    </div>
 
   </div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 <script src="game.js"></script>
 </body>
